parser/src/snapshots/parser__lexer__tests__lex_line_comment.snap
---
source: parser/src/lexer.rs
expression: get_tokens(input)
---
[
    Span {
        value: Token {
            kind: INT_NUMBER,
            len: 2,
        },
        start: Position {
            column: 1,
            line: 1,
            absolute: 0,
        },
        end: Position {
            column: 3,
            line: 1,
            absolute: 2,
        },
    },
    Span {
        value: Token {
            kind: WHITESPACE,
            len: 1,
        },
        start: Position {
            column: 3,
            line: 1,
            absolute: 2,
        },
        end: Position {
            column: 4,
            line: 1,
            absolute: 3,
        },
    },
    Span {
        value: Token {
            kind: COMMENT,
            len: 25,
        },
        start: Position {
            column: 4,
            line: 1,
            absolute: 3,
        },
        end: Position {
            column: 29,
            line: 1,
            absolute: 28,
        },
    },
    Span {
        value: Token {
            kind: EOF,
            len: 1,
        },
        start: Position {
            column: 29,
            line: 1,
            absolute: 28,
        },
        end: Position {
            column: 29,
            line: 1,
            absolute: 28,
        },
    },
]
