parser/src/snapshots/parser__lexer__tests__lex_nested_block_comments.snap
---
source: parser/src/lexer.rs
expression: get_tokens(input)
---
[
    Span {
        value: Token {
            kind: COMMENT,
            len: 35,
        },
        start: Position {
            column: 1,
            line: 1,
            absolute: 0,
        },
        end: Position {
            column: 36,
            line: 1,
            absolute: 35,
        },
    },
    Span {
        value: Token {
            kind: EOF,
            len: 1,
        },
        start: Position {
            column: 36,
            line: 1,
            absolute: 35,
        },
        end: Position {
            column: 36,
            line: 1,
            absolute: 35,
        },
    },
]
